Live Data/mdapipkg/unpackaged/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Allowed_Phone_Support__c</fullName>
        <formula>CASE(   PlanType__c , 
&quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;),
&quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Entitled to Phone Support&quot;),
&quot;No Phone Support&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone/Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssociatedProductRange__c</fullName>
        <label>Associated Product Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EntitledToHowToQuestions__c</fullName>
        <formula>CASE(  PlanType__c  , 

      &quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;), 

      &quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;No Plan Selected&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&quot;How To&quot; Qs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRouting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Routing</label>
        <referenceTo>ProductRouting__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopicID__c</fullName>
        <formula>ProductRouting__r.TopicID__c</formula>
        <label>Topic ID</label>
        <type>Text</type>
    </fields>
</CustomObject>